Cambio de tamaño de categorías y títulos más grandes

--- a/santiago_papeleria_frontend/src/app/pages/home/components/featured-products/featured-products.html
+++ b/santiago_papeleria_frontend/src/app/pages/home/components/featured-products/featured-products.html
@@ -1,7 +1,7 @@
 <section class="py-10 bg-[#F2F2F2]">
   <div class="container mx-auto px-4 max-w-6xl">
     <div class="text-center mb-8">
-      <h2 class="text-2xl font-bold text-[#104D73] mb-2">
+      <h2 class="text-4xl md:text-5xl font-bold text-[#104D73] mb-6">
         ¡Productos más <span class="text-[#F2CB07]">Vendidos!</span>
       </h2>
     </div>
